# small-gradients-nlp-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/samples/: mbpp_samples.json
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: gradient_dynamics_synthetic_data_low_perplexity_fine-tuning_language_models_20260407_072952.jsonl  synthetic_data_model_collapse_LLM_training_20260407_072543.jsonl
papers/: README.md
papers/pages/: dohmatob2024_strong_model_collapse_manifest.txt  feng2024_synthesize_without_collapse_manifest.txt  ferbach2025_escaping_collapse_manifest.txt  gerstgrasser2024_tale_of_tails_manifest.txt  kazdan2024_how_bad_synthetic_data_manifest.txt  lin2025_low_perplexity_token_manifest.txt  seddik2025_position_model_collapse_manifest.txt  shumailov2023_curse_of_recursion_manifest.txt  wang2024_theoretical_proof_collapse_manifest.txt  (+2 more)
results/: all_results.json  environment.json  exp1_perplexity.json  exp2_gradient_norms.json  exp3_gradient_directions.json  exp4_learning_efficiency.json
src/: experiment.py  run_exp3_4.py  visualize.py
